GNOME Bugzilla – Bug 617376
doesn't build with liblzma master
Last modified: 2010-05-07 02:51:10 UTC
I have liblzma-dec installed (on Debian, 4.999.9beta+20100307-1, a snapshot from upstream Git) but Yelp fails with: In file included from yelp-lzma-decompressor.c:31: yelp-lzma-decompressor.h:28:21: error: lzmadec.h: No such file or directory yelp-lzma-decompressor.c:39: error: expected specifier-qualifier-list before ‘lzmadec_stream’ This is after configure printed checking for lzmadec_open in -llzmadec... no
Not a fix, but with git master, you can now use --disable-lzma to get around this for now. I'll have to look into this more deeply. Might also be addressed by bug #602792
Same error here: liblzma-dev 4.999.9beta+20091116-1 (Ubuntu lucid package)
Created attachment 160480 [details] [review] Update LZMA decoder to the new API Update LZMA decoder to the new API Here a untested patch to port the code to the new API
Comment on attachment 160480 [details] [review] Update LZMA decoder to the new API commit 0762da1d96c25e193f6f44d824c3da48f264265a
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.