Update LZMA decoder to the new API

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=617376